# bankapp

./: .gitignore  build.sh  pyproject.toml  requirements.txt
bankapp/: settings.py  urls.py
bankappfrontend/: package-lock.json  package.json
bankappfrontend/public/: index.html
bankappfrontend/src/: App.css  App.tsx  index.css
bankappfrontend/src/components/: UserInfo.tsx
bankappfrontend/src/components/AccountsTab/: AccountListItem.tsx  AccountsTab.module.css  AccountsTab.tsx
bankappfrontend/src/components/AuthForms/: AuthForms.module.css  LoginForm.tsx  SignUpForm.tsx
bankappfrontend/src/components/Header/: Header.module.css  Header.tsx
bankappfrontend/src/components/MoneyTreeTab/: MoneyTree.module.css  MoneyTree.tsx
bankappfrontend/src/components/NavigationTabs/: NavigationTabs.module.css  NavigationTabs.tsx
bankappfrontend/src/components/TransfersTab/: AccountSelector.tsx  AccountSelectorModal.tsx  TransferFunds.module.css  TransferFunds.tsx  TransferFundsForm.tsx
bankappfrontend/src/constants/: errors.ts  index.ts
bankappfrontend/src/context/: AuthContext.tsx
bankappfrontend/src/pages/: Auth.tsx  Home.tsx
bankappfrontend/src/utils/: DollarInput.tsx  HelperFunctions.ts  RequireAuth.tsx
bankapplication/: admin.py  apps.py  models.py  serializers.py
bankapplication/migrations/: 0001_initial.py
bankapplication/views/: views.py  views_auth.py  views_banking.py
render/templates/render/: index.html
staticfiles/js/: 787.7824d94a.chunk.js  787.7824d94a.chunk.js.map  main.0a7382df.js  main.0a7382df.js.map
(+11 files in other folders)
